--- a/utilities/magick-cache.1.in
+++ b/utilities/magick-cache.1.in
@@ -7,7 +7,7 @@ magick-cache \- The Magick Cache stores and retrieves images efficiently within 
 \fBmagick-cache\fP [\fI-key passphrase\fP] [\fIdelete | expire | list\fP] [\fIpath\fP] \fIiri\fP
 \fBmagick-cache\fP [\fI-key passphrase\fP] [\fI-ttl time\fP [\fIget | put | list\fP] [\fIpath\fP] \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
-magick-cache \- stores and retrieves images efficiently within milliseconds with a small memory footprint. In addition to images, you can store video, audio, and associated properties. The cache supports virtually unlimited content upwards of billions of images making it suitable as a web image service.
+magick-cache \- store and retrieve images efficiently within milliseconds with a small memory footprint. In addition to images, you can store video, audio, and associated properties. The cache supports virtually unlimited content upwards of billions of images making it suitable as a web image service.
 
 For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick-cache.html or http://imagemagick.org/script/magick-cache.php.
 .SH DESCRIPTION
