--- a/MagickCache/Makefile.in
+++ b/MagickCache/Makefile.in
@@ -313,7 +313,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-@DEBUG_FALSE@AM_CFLAGS = -I$(top_srcdir)/MagickCache -Wall -g \
+@DEBUG_FALSE@AM_CFLAGS = -I$(top_srcdir)/MagickCache -Wall \
 @DEBUG_FALSE@	$(MAGICKCORE_CFLAGS)
 @DEBUG_TRUE@AM_CFLAGS = -I$(top_srcdir)/MagickCache -Wall -g -O3 \
 @DEBUG_TRUE@	$(MAGICKCORE_CFLAGS)
