--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,12 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = \
 					MagickCache \
           utilities
+
+TOP_EXTRA_DIST = \
+	ChangeLog \
+	LICENSE \
+	README.txt
+
+# Additional files to distribute
+EXTRA_DIST = \
+	$(TOP_EXTRA_DIST)
