--- a/Makefile.in
+++ b/Makefile.in
@@ -157,8 +157,8 @@ CTAGS = ctags
 CSCOPE = cscope
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in AUTHORS \
-	COPYING ChangeLog INSTALL NEWS README compile depcomp \
-	install-sh missing
+	COPYING ChangeLog INSTALL NEWS compile depcomp install-sh \
+	missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -321,6 +321,16 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = \
 					MagickCache \
           utilities
+
+TOP_EXTRA_DIST = \
+	ChangeLog \
+	LICENSE \
+	README.txt
+
+
+# Additional files to distribute
+EXTRA_DIST = \
+	$(TOP_EXTRA_DIST)
 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
