--- a/Makefile.in
+++ b/Makefile.in
@@ -157,8 +157,7 @@ CTAGS = ctags
 CSCOPE = cscope
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in AUTHORS \
-	COPYING ChangeLog INSTALL NEWS compile depcomp install-sh \
-	missing
+	ChangeLog INSTALL NEWS compile depcomp install-sh missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -320,7 +319,8 @@ top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = \
 					MagickCache \
-          utilities
+          utilities \
+          tests
 
 TOP_EXTRA_DIST = \
 	ChangeLog \
