--- a/utilities/magick-cache.1.in
+++ b/utilities/magick-cache.1.in
@@ -4,7 +4,7 @@ magick-cache \- The Magick Cache stores and retrieves images efficiently within 
 .SH SYNOPSIS
 .TP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIcreate\fP \fIdelete\fP] \fIpath\fP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | list\fP] [\fIpath\fP] \fIiri\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | identify\fP] [\fIpath\fP] \fIiri\fP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
