--- a/utilities/magick-cache.1.in
+++ b/utilities/magick-cache.1.in
@@ -3,9 +3,9 @@
 magick-cache \- The Magick Cache stores and retrieves images efficiently within milliseconds with a small memory footprint.
 .SH SYNOPSIS
 .TP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIcreate\fP \fIdelete\fP] \fIpath\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIcreate\fP | \fIdelete\fP | \fIlist\fP] \fIpath\fP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | identify\fP] [\fIpath\fP] \fIiri\fP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-cipher-key passkey.txt\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
 magick-cache \- store and retrieve images efficiently within milliseconds with a small memory footprint. In addition to images, you can store video, audio, and associated properties. The cache supports virtually unlimited content upwards of billions of images making it suitable as a web image service.
