--- a/utilities/magick-cache.1.in
+++ b/utilities/magick-cache.1.in
@@ -12,7 +12,7 @@ magick-cache \- store and retrieve images efficiently within milliseconds with a
 
 For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick-cache.html or http://imagemagick.org/script/magick-cache.php.
 .SH DESCRIPTION
-  \-passkey passkey cache key passkey file
+  \-passkey passkey   passkey file
   \-extract geometry  extract or resize the image
   \-ttl time          time to live in seconds of neumonics, e.g. "2 days"
 
