--- a/Makefile.in
+++ b/Makefile.in
@@ -319,6 +319,7 @@ top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = \
 					MagickCache \
+          config \
           utilities \
           tests
 
