--- a/utilities/magick-cache.1.in
+++ b/utilities/magick-cache.1.in
@@ -3,8 +3,8 @@
 magick-cache \- The Magick Cache stores and retrieves images efficiently within milliseconds with a small memory footprint.
 .SH SYNOPSIS
 .TP
-\fBmagick-cache\fP [\fI-passkey filename\fP] [\fIcreate\fP | \fIdelete\fP] \fIpath\fP
-\fBmagick-cache\fP [\fI-passkey filename\fP] [\fIdelete | expire | identify | list\fP] [\fIpath\fP] \fIiri\fP
+\fBmagick-cache\fP [\fI-passkey filename\fP] \fIcreate\fP \fIpath\fP
+\fBmagick-cache\fP [\fI-passkey filename\fP] [\fIdelete | expire | identify\fP] [\fIpath\fP] \fIiri\fP
 \fBmagick-cache\fP [\fI-passkey filename\fP] [\fI-passphrase filename\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
 \fBmagick-cache\fP [\fI-passkey filename\fP] [\fI-passphrase filename\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
@@ -12,9 +12,10 @@ magick-cache \- store and retrieve images efficiently within milliseconds with a
 
 For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick-cache.html or http://imagemagick.org/script/magick-cache.php.
 .SH DESCRIPTION
-  \-passkey passkey   passkey file
-  \-extract geometry  extract or resize the image
-  \-ttl time          time to live in seconds of neumonics, e.g. "2 days"
+  \-passkey passkey       passkey file
+  \-passphrase passphrase passphrase file
+  \-extract geometry      extract or resize the image
+  \-ttl time              time to live in seconds of neumonics, e.g. "2 days"
 
 .SH COPYRIGHT
 \fBCopyright (C) 1999-2021 ImageMagick Studio LLC. Additional copyrights and licenses apply to this software, see file://@DOCUMENTATION_PATH@/www/license.html or http://imagemagick.org/script/license.php\fP
