--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,6 +19,17 @@ jobs:
 
     - name: Configure MagickCache
       run: |
+        sudo apt update
+        sudo apt-get install build-essential
+        wget https://www.imagemagick.org/download/ImageMagick.tar.gz
+        tar xvzf ImageMagick.tar.gz
+        cd ImageMagick-7*
+        ./configure
+        make
+        sudo make install
+
+    - name: Configure MagickCache
+      run: |
         export CFLAGS="-Wno-deprecated-declarations"
         ./configure
         echo "" > config.status
