--- a/Makefile.in
+++ b/Makefile.in
@@ -154,8 +154,8 @@ am__define_uniq_tagged_files = \
   done | $(am__uniquify_input)`
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in AUTHORS \
-	ChangeLog.md INSTALL.md NEWS README.md compile depcomp \
-	install-sh missing
+	ChangeLog.md INSTALL.md README.md compile depcomp install-sh \
+	missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -244,6 +244,7 @@ MAGICKCACHE_MAJOR_VERSION = @MAGICKCACHE_MAJOR_VERSION@
 MAGICKCACHE_MICRO_VERSION = @MAGICKCACHE_MICRO_VERSION@
 MAGICKCACHE_MINOR_VERSION = @MAGICKCACHE_MINOR_VERSION@
 MAGICKCACHE_PATCHLEVEL_VERSION = @MAGICKCACHE_PATCHLEVEL_VERSION@
+MAGICKCACHE_PCFLAGS = @MAGICKCACHE_PCFLAGS@
 MAGICKCACHE_VERSION = @MAGICKCACHE_VERSION@
 MAGICKCORE_CFLAGS = @MAGICKCORE_CFLAGS@
 MAGICKCORE_LIBS = @MAGICKCORE_LIBS@
