--- a/utilities/Makefile.in
+++ b/utilities/Makefile.in
@@ -205,6 +205,7 @@ MAGICKCACHE_MAJOR_VERSION = @MAGICKCACHE_MAJOR_VERSION@
 MAGICKCACHE_MICRO_VERSION = @MAGICKCACHE_MICRO_VERSION@
 MAGICKCACHE_MINOR_VERSION = @MAGICKCACHE_MINOR_VERSION@
 MAGICKCACHE_PATCHLEVEL_VERSION = @MAGICKCACHE_PATCHLEVEL_VERSION@
+MAGICKCACHE_PCFLAGS = @MAGICKCACHE_PCFLAGS@
 MAGICKCACHE_VERSION = @MAGICKCACHE_VERSION@
 MAGICKCORE_CFLAGS = @MAGICKCORE_CFLAGS@
 MAGICKCORE_LIBS = @MAGICKCORE_LIBS@
