--- a/MagickCache/Makefile.in
+++ b/MagickCache/Makefile.in
@@ -97,7 +97,7 @@ DIST_COMMON = $(srcdir)/Makefile.am $(include_HEADERS) \
 	$(noinst_HEADERS) $(am__DIST_COMMON)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = version.h
+CONFIG_CLEAN_FILES = version.h MagickCache.pc
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -193,8 +193,8 @@ am__define_uniq_tagged_files = \
   unique=`for i in $$list; do \
     if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
   done | $(am__uniquify_input)`
-am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/version.h.in \
-	$(top_srcdir)/depcomp
+am__DIST_COMMON = $(srcdir)/MagickCache.pc.in $(srcdir)/Makefile.in \
+	$(srcdir)/version.h.in $(top_srcdir)/depcomp
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
@@ -239,6 +239,7 @@ MAGICKCACHE_MAJOR_VERSION = @MAGICKCACHE_MAJOR_VERSION@
 MAGICKCACHE_MICRO_VERSION = @MAGICKCACHE_MICRO_VERSION@
 MAGICKCACHE_MINOR_VERSION = @MAGICKCACHE_MINOR_VERSION@
 MAGICKCACHE_PATCHLEVEL_VERSION = @MAGICKCACHE_PATCHLEVEL_VERSION@
+MAGICKCACHE_PCFLAGS = @MAGICKCACHE_PCFLAGS@
 MAGICKCACHE_VERSION = @MAGICKCACHE_VERSION@
 MAGICKCORE_CFLAGS = @MAGICKCORE_CFLAGS@
 MAGICKCORE_LIBS = @MAGICKCORE_LIBS@
@@ -324,6 +325,9 @@ include_HEADERS = MagickCache.h \
                   version.h
 
 noinst_HEADERS = magick-cache-private.h
+MAGICKCORE_EXTRA_DIST = \
+  MagickCache/MagickCache.pc.in
+
 
 # The files to add to the library and to the source distribution
 libMagickCache_a_SOURCES = \
@@ -366,6 +370,8 @@ $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
 version.h: $(top_builddir)/config.status $(srcdir)/version.h.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+MagickCache.pc: $(top_builddir)/config.status $(srcdir)/MagickCache.pc.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 install-libLIBRARIES: $(lib_LIBRARIES)
 	@$(NORMAL_INSTALL)
