export a proper pkg configuration file

--- a/MagickCache/MagickCache.pc.in
+++ b/MagickCache/MagickCache.pc.in
@@ -1,9 +1,9 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/MagickCache-@MAGICKCACHE_MAJOR_VERSION@
-includearchdir=@INCLUDEARCH_DIR@/MagickCache-@MAGICKCACHE_MAJOR_VERSION@
-libname=MagickCore-@MAGICKCACHE_MAJOR_VERSION@
+includedir=@includedir@/MagickCache
+includearchdir=@includedir@/MagickCache
+libname=MagickCache
  
 Name: MagickCache
 Description: MagickCache - C API for MagickCache
@@ -11,4 +11,4 @@ URL: https://github.com/ImageMagick/MagickCache
 Version: @PACKAGE_BASE_VERSION@
 Cflags: -I${includearchdir} -I${includedir} @MAGICKCACHE_PCFLAGS@
 Libs: -L${libdir} -l${libname}
-Libs.private: -L${libdir} -l${libname} @MAGICKCACHE_LIBS@ @MATH_LIBS@
+Libs.private: -L${libdir} -l${libname}
