latest automake configuration for shared library

--- a/configure.ac
+++ b/configure.ac
@@ -156,6 +156,7 @@ dnl ===========================================================================
 AC_SUBST([MAGICKCACHE_PCFLAGS])
 
 LT_INIT([win32-dll dlopen])
+AC_PROG_CXX
 
 AC_CONFIG_FILES([Makefile
                  config/configure.xml
