--- a/utilities/Makefile.am
+++ b/utilities/Makefile.am
@@ -9,7 +9,7 @@ AM_CFLAGS += $(MAGICKCORE_CFLAGS)
 bin_PROGRAMS = magick-cache
 magick_cache_SOURCES = magick-cache.c
 
-magick_cache_LDADD = $(top_builddir)/MagickCache/libMagickCache.a $(AM_LDFLAGS)
+magick_cache_LDADD = $(top_builddir)/MagickCache/libMagickCache.la $(AM_LDFLAGS)
 magick_cache_LDADD += $(MAGICKCORE_LIBS)
 
 UTILITIES_MANS = \
