--- a/utilities/Makefile.in
+++ b/utilities/Makefile.in
@@ -188,6 +188,7 @@ AWK = @AWK@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSCOPE = @CSCOPE@
 CTAGS = @CTAGS@
@@ -220,6 +221,7 @@ LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
 LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
@@ -328,12 +330,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-@DEBUG_FALSE@AM_CFLAGS = -I$(top_srcdir)/utilities \
-@DEBUG_FALSE@	-I$(top_srcdir)/MagickCache -Wall -O3 \
-@DEBUG_FALSE@	$(MAGICKCORE_CFLAGS)
-@DEBUG_TRUE@AM_CFLAGS = -I$(top_srcdir)/utilities \
-@DEBUG_TRUE@	-I$(top_srcdir)/MagickCache -Wall -g -O3 \
-@DEBUG_TRUE@	$(MAGICKCORE_CFLAGS)
+AM_CFLAGS = $(MAGICKCORE_CFLAGS)
 magick_cache_SOURCES = magick-cache.c
 magick_cache_LDADD = $(top_builddir)/MagickCache/libMagickCache.la \
 	$(AM_LDFLAGS) $(MAGICKCORE_LIBS)
