--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,11 @@ TOP_EXTRA_DIST = \
 	README.md \
 	SECURITY.md
 
+# Binary scripts
+bin_SCRIPTS = \
+  MagickCache/MagickCache-config
+
 # Additional files to distribute
 EXTRA_DIST = \
-	$(TOP_EXTRA_DIST)
+	$(TOP_EXTRA_DIST) \
+	MagickCache/MagickCache-config.in
