fix codeql build

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Configure MagickCache
       run: |
-        export CFLAGS="-Wno-deprecated-declarations"
+        autoreconf --force --install
         ./configure
         echo "" > config.status
 
