remove ChangeLog.md

--- a/Makefile.in
+++ b/Makefile.in
@@ -188,9 +188,9 @@ am__define_uniq_tagged_files = \
   done | $(am__uniquify_input)`
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in \
-	$(top_srcdir)/config/configure.xml.in AUTHORS ChangeLog.md \
-	INSTALL.md README.md compile config.guess config.sub depcomp \
-	install-sh ltmain.sh missing
+	$(top_srcdir)/config/configure.xml.in AUTHORS INSTALL.md \
+	README.md compile config.guess config.sub depcomp install-sh \
+	ltmain.sh missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -397,7 +397,6 @@ SUBDIRS = \
           tests
 
 TOP_EXTRA_DIST = \
-	ChangeLog.md \
 	INSTALL.md \
 	LICENSE \
 	README.md \
